package Ej1;

public interface Elemento {
    double getPrecio();
    int getCodigo();
}
