package Ej1;

public interface ElementoFactory {
    Elemento crearElemento(double precio, int codigo);
}
